--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
+    <p>Window resized <span id="demo">0</span> times.</p>
   </footer>
 
 </body>
